--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>edu.grinnell.csc207</groupId>
-  <artifactId>cipher</artifactId>
+  <artifactId>bigfractions</artifactId>
   <version>1.0</version>
 
   <properties>
@@ -31,7 +31,7 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>3.3.0</version>
           <configuration>
-            <mainClass>edu.grinnell.csc207.main.Cipher</mainClass>
+            <mainClass>edu.grinnell.csc207.main.FRACTIONS</mainClass>
           </configuration>
         </plugin>
 
@@ -51,11 +51,22 @@
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
-                <mainClass>edu.grinnell.csc207.main.Cipher</mainClass>
+                <mainClass>edu.grinnell.csc207.main.FRACTIONS</mainClass>
               </manifest>
             </archive>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>2.43.0</version>
+          <configuration>
+              <java>
+                  <googleJavaFormat/>
+              </java>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
